# trustmess-backend

./: .gitignore  Dockerfile  init_db.py  main.py  pyproject.toml  start.py
.github/workflows/: deploy-to-gcp.yml  final-project-FE.code-workspace
src/: db_connector.py
src/db/: connection.py  queries.py
src/routes/: auth.py  users.py  websocket.py
src/schemas/: auth.py
src/secure/: auth_middleware.py  jwt_handler.py
